# calc

./: CMakeLists.txt  LICENSE
src/: calculate.c  calculate.h  error.c  error.h  interface.c  interface.h  list.c  list.h  main.c  parser.c  parser.h  scanner.c  scanner.h
